--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,10 @@
 		"stevebauman/location": "1.1.*",
 		"darryldecode/cart":"dev-master",
 		"thomaswelton/laravel-gravatar": "dev-master",
-		"mccool/laravel-auto-presenter": "~3.0",
 		"tuurbo/amazon-payment": "~1.3.0",
-		"classygeeks/potion":"*"
+		"classygeeks/potion":"*",
+		"mccool/laravel-auto-presenter": "~3.1.1",
+		"mews/captcha": "dev-master"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~4.0",
