--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
 		"url": "https://github.com/capitaladot/laravel-menu-builder"
 	}],
 	"require" : {
-		"laravel/framework" : "5.1.35",
-		"laravel/socialite" : "3.*",
+		"laravel/framework" : "5.1.33",
+		"laravel/socialite" : "2.0.x-dev",
 		"martinbean/laravel-menu-builder" : "dev-master",
-		"illuminate/html" : "dev-master",
+		"laravelcollective/html" : "5.1.*",
 		"kris/laravel-form-builder" : "~1.1",
 		"doctrine/dbal" : "~2.5.1",
 		"caffeinated/flash" : "*",
@@ -44,8 +44,14 @@
 		"mitni/laravel-google-spreadsheet": "^0.1.2",
 		"felixkiss/uniquewith-validator": "2.*",
 		"riari/laravel-forum": "~3.0",
-		"riari/laravel-forum-frontend": "~1.0",
-		"illuminate/auth": "5.1.*"
+		"riari/laravel-forum-frontend": "1.0.3",
+		"illuminate/auth": "5.1.*",
+		"rtconner/laravel-likeable":"~1.2",
+		"unisharp/laravel-ckeditor": "^4.5",
+		"square/connect": "2.0.0.1",
+		"socialiteproviders/manager":"*",
+		"aws/aws-sdk-php": "~3.0",
+		"swiftmailer/swiftmailer":"5.4.*"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~4.0",
@@ -62,6 +68,12 @@
 			"App\\Contracts\\" : "app/Contracts",
 			"App\\Criteria\\" : "app/Criteria",
 			"App\\Http\\Composers\\" : "app/Http/Composers",
+			"App\\Http\\Controllers\\" : "app/Http/Controllers",
+			"App\\Http\\Controllers\\Forum\\" : "app/Http/Controllers/Forum",
+			"App\\Http\\Controllers\\Forum\\API\\" : "app/Http/Controllers/Forum/API",
+			"App\\Http\\Controllers\\Forum\\Frontend\\" : "app/Http/Controllers/Forum/Frontend",
+			"App\\Listeners\\" : "app/Listeners",
+			"App\\Policies\\" : "app/Policies",
 			"App\\Presenters\\" : "app/Presenters",
 			"App\\Providers\\" : "app/Providers",
 			"App\\Repositories\\" : "app/Repositories",
